feat: add new routes and screens for authentication, notifications, onboarding, profile, rides, and rooms
